@@ -2,5 +2,6 @@ EBUILD perl-Module-Build-0.32.ebuild 588 RMD160 5f315d93cef4ddf565c8f93652b3e818
 EBUILD perl-Module-Build-0.33.ebuild 588 RMD160 f456858c89ed8a85d9bba791100c912a7e5dfa2d SHA1 91992dfc9eaf5c8877f51e5332b9da55583896e3 SHA256 3cecca96c48b6df96f4543158ed9a380e5313d78b74fc11635663fb223c56e2a
 EBUILD perl-Module-Build-0.34.0201.ebuild 612 RMD160 e061e974fbd3b108589010dac44a56dacd3e2156 SHA1 127183c5a2ea644dfbbde4f4db408f91ec7fef8a SHA256 7663fadf13ac521aca7867a831f8b60629a913c7191f541b3bce5c221f4f8a7c
 EBUILD perl-Module-Build-0.34.ebuild 588 RMD160 3c1465789cc81f758f054f9d5a9073683f2dc212 SHA1 c44268c5bb6e433e2edfc2d32437a6ddcd8ffdd1 SHA256 4594573a4150e1efc941288a564bd24096b6a873fe33f04a5b30ae8b51fcd59c
-MISC ChangeLog 2167 RMD160 8beb7c666e5f89fee0e3fcaba2c8ce67776b93fb SHA1 fd181d03f36f1d52ebbf9d2fa622ab5c84fa09e8 SHA256 40b517879bb8d12f97a33b4a0d44639fee9cc58cbc6804839cb8c0c8763ec967
+EBUILD perl-Module-Build-0.35.ebuild 578 RMD160 247080504134d921592f3d2e009603b7ed3f6086 SHA1 38518ff3dd5ffd222b3cd34982aa83dc0b116cc8 SHA256 7c73fd16aa3217daca206b6aa35543cd36836449221e48c23f88df0adce9e117
+MISC ChangeLog 2304 RMD160 92ace537b5856799ae2f43aacc9f68aae9d73f13 SHA1 cf4f9b3f74ba7f4b2ffe6a68366241d6892abc46 SHA256 287ebfd7cda0cc26526fc363854bae240b3acdb6548ca3697db0201320a170f5
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
