@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Module-Build
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Module-Build/ChangeLog,v 1.12 2009/08/25 10:56:45 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Module-Build/ChangeLog,v 1.13 2009/08/28 08:20:56 tove Exp $
+
+*perl-Module-Build-0.35 (28 Aug 2009)
+
+  28 Aug 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Module-Build-0.35.ebuild:
+  Version bump
 
   25 Aug 2009; Torsten Veller <tove@gentoo.org>
   perl-Module-Build-0.34.0201.ebuild:
